--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   },
   "homepage": "https://github.com/wmt36/MonsterMaker#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongod": "^2.0.0",
     "mongojs": "^3.1.0",
     "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "proxy": "^1.0.2",
     "seed": "^0.4.4"
   }
 }
